# pulse-skills

./: INDEX.md  README.md  manifest.json  pyproject.toml
.github/workflows/: dispatch-pulse-preview.yml
pulse_skills/: __init__.py
scripts/: generate_manifest.py
skills/creating-skills/: SKILL.md
skills/knowledge-management/: SKILL.md
skills/meeting-insights/: SKILL.md
skills/memory-patterns/: SKILL.md
skills/powerpoint-generator/: SKILL.md
skills/powerpoint-generator/references/: examples.md  usage-guide.md
skills/powerpoint-generator/scripts/: run.py
skills/ui-design-workflow/: SKILL.md
skills/ui-design-workflow/references/: common-ui-patterns  design-system-guide
skills/ui-design-workflow/scripts/: run.py
skills/visualization-systems/: SKILL.md
skills/visualization-systems/references/: spec-patterns.md
